cmake_minimum_required(VERSION 3.11)
project(pmgui_demo)

include_directories(${PROJECT_SOURCE_DIR}/../external_libs/sfml/include/SFML/ ${PROJECT_SOURCE_DIR}/../external_libs/ ${PROJECT_SOURCE_DIR}/../external_libs/include/)
set(BASE_PATH ${PROJECT_SOURCE_DIR}/..)

set(SOURCE_FILES DemoManager.cpp DemoManager.h)

if(LINUX)
    set(MY_STATIC_LIBS sfml-network sfml-audio sfml-graphics sfml-window sfml-system)
    add_executable(pmgui_demo main.cpp ${SOURCE_FILES} ${GUI_SOURCE_FILES} ${IMGUI_SOURCE_FILES} ${FMT_SOURCE_FILES} )
    target_link_libraries(pmgui_demo pmgui stdc++fs png ${MY_STATIC_LIBS} ${SFML_DEPENDENCIES} ${SFML_REST})
elseif(WIN32)
    if(MSVC)
        set(MY_STATIC_LIBS sfml-network sfml-audio sfml-graphics sfml-window sfml-system)
        add_executable(pmgui_demo main.cpp ${SOURCE_FILES} ${GUI_SOURCE_FILES} ${IMGUI_SOURCE_FILES} ${FMT_SOURCE_FILES}) #${BASE_PATH}/logo/icon.rc)
        target_link_libraries(pmgui_demo pmgui ${MY_STATIC_LIBS} ${SFML_DEPENDENCIES})
    else()
        set(MY_STATIC_LIBS sfml-network sfml-audio sfml-graphics sfml-window sfml-system)
        add_executable(pmgui_demo main.cpp ${SOURCE_FILES} ${GUI_SOURCE_FILES} ${IMGUI_SOURCE_FILES} ${FMT_SOURCE_FILES} ) #${BASE_PATH}/logo/icon.rc)
        target_link_libraries(pmgui_demo pmgui stdc++fs ${MY_STATIC_LIBS} ${SFML_DEPENDENCIES})
    endif()
elseif(APPLE)
    set(SFML_BUILD_STATIC 1)

    set(MY_STATIC_LIBS sfml-network sfml-audio sfml-graphics sfml-window sfml-system)
    set(FRAMEWORK_LIBS_BASE "-framework Carbon" "-framework OpenGL" "-framework Cocoa" "-framework IOKit" "-framework CoreVideo" "-framework CoreFoundation")

    set(MACOSX_BUNDLE_BUNDLE_NAME pmgui_demo)
    set(MACOSX_BUNDLE_GUI_IDENTIFIER "robin.pmgui.demo")
    set(MACOSX_BUNDLE_INFO_STRING "A demo of PmGui")
    set(MACOSX_BUNDLE_ICON_FILE "icon.icns")
    set(MACOSX_BUNDLE_LONG_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
    set(MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
    set(MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
    add_executable(pmgui_demo MACOSX_BUNDLE main.cpp ${SOURCE_FILES} ${GUI_SOURCE_FILES} ${IMGUI_SOURCE_FILES} ${FMT_SOURCE_FILES} )

    target_link_libraries(pmgui_demo pmgui stdc++ -ObjC ${MY_STATIC_LIBS} ${FRAMEWORK_LIBS_BASE} ${SFML_DEPENDENCIES})
    set_target_properties(pmgui_demo PROPERTIES
            MACOSX_BUNDLE TRUE)
endif()